add test component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -497,5 +497,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<div>haha</div>
+<app-test></app-test>
 <router-outlet></router-outlet>
